Preferences Keybindings Crash #55198

Closed
opened 2018-05-25 12:25:25 +02:00 by Julien Kaspar · 3 comments
Member

Blender Version
Broken: 2.8 230943be2d

Short description of error
Trying to change a few specific shortcut configurations in the properties will crash Blender. I noticed this while trying to change the numpad + shortcut for the View3D Fly/Walk Modal. Just hovering the mouse over the keybinding for over a second and it will crash.

Exact steps for others to reproduce the error
Go to "Edit" -> "User Preferences" -> "Input" -> Switch the search type to "Key-Binding" -> Search for "any numpad +".
Hover the mouse over the key binding button of either "View3D Fly Modal" or "View3D Walk Modal" and it will crash after 1 second of hovering.

**Blender Version** Broken: 2.8 230943be2d0 **Short description of error** Trying to change a few specific shortcut configurations in the properties will crash Blender. I noticed this while trying to change the numpad + shortcut for the View3D Fly/Walk Modal. Just hovering the mouse over the keybinding for over a second and it will crash. **Exact steps for others to reproduce the error** Go to "Edit" -> "User Preferences" -> "Input" -> Switch the search type to "Key-Binding" -> Search for "any numpad +". Hover the mouse over the key binding button of either "View3D Fly Modal" or "View3D Walk Modal" and it will crash after 1 second of hovering.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

This issue was referenced by dc26ef081b

This issue was referenced by dc26ef081b98f0c475ccf79935360cf9986e2a02
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55198
No description provided.