Fix T55198: Preferences Keybindings Crash

Operator sanitize function would be called for non operator props. Mistake from
88eafe078a5b5111c.